--- a/Day 2 Task/Task1.html
+++ b/Day 2 Task/Task1.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css" /> <!-- Corrected the stylesheet link -->
+    <link rel="stylesheet" href="style.css" /> 
     <title>Calculator</title>
 </head>
 <body>
-    <header>
-        <h1>Calculator</h1>
-    </header>
+    <header></header>
     <div class="container">
         <form name="calc">
             <div id="calc">
-                <input type="text" class="display" readonly> 
-                <br><br>
+                <input type="text" class="display"> 
                 <input class="button digits" type="button" value="7">
                 <input class="button digits" type="button" value="8"> 
                 <input class="button digits" type="button" value="9"> 
@@ -39,6 +36,6 @@
             </div>
         </form>
     </div>
-    <script src="script.js"></script> <!-- Added a script tag for JavaScript file -->
+    <script src="script.js"></script> 
 </body>
 </html>
