Remaining task done

--- a/Day2 Task - Basic JS/Task3.html
+++ b/Day2 Task - Basic JS/Task3.html
@@ -10,32 +10,32 @@
 </head>
 
 <body>
-    <header class="header">
-        Todo List 🖊📑
-    </header>
+    <div class="gradientBg">
+        <header class="header">
+            To-Do List 🖊📑
+        </header>
+        <div class="container">
+            <div class="make-todolist">
+                <input type="text" class="add-tasks" placeholder="write something 🤔 to the list" />
+                <button class="add-button"><span>Add</span></button>
+            </div>
+            <div class="todo-content">
+                <h3 class="title">Todo</h3>
+                <ul class="todo-list">
+                </ul>
+            </div>
 
-    <div class="container">
-        <div class="make-todolist">
-            <input type="text" class="add-tasks" placeholder="write something 🤔 to the list" />
-            <button class="add-button"><span>Add</span></button>
-        </div>
-        <div class="todo-content">
-            <h3 class="title">Todo</h3>
-            <ul class="todo-list">
-            </ul>
-        </div>
+            <div class="completed-task">
+                <h3 class="title">Done</h3>
+                <ul class="completed-list">
+                </ul>
+            </div>
 
-        <div class="completed-task">
-            <h3 class="title">Done</h3>
-            <ul class="completed-list">
-            </ul>
         </div>
-
+        <footer>
+            <p>&copy; Copyright Parangi Rathod
+        </footer>
     </div>
-    <footer class="footer">
-        Created by Parangi
-    </footer>
-
 </body>
 <script src="todo.js"></script>
 
