--- a/Day2 Task - Basic JS/Task3.html
+++ b/Day2 Task - Basic JS/Task3.html
@@ -20,7 +20,7 @@
                 <button class="add-button"><span>Add</span></button>
             </div>
             <div class="todo-content">
-                <h3 class="title">Todo</h3>
+                <h3 class="title">Todo</h3><br>
                 <ul class="todo-list">
                 </ul>
             </div>
