--- a/Day2 Task - Basic JS/Calculator/Task1.html
+++ b/Day2 Task - Basic JS/Calculator/Task1.html
@@ -14,6 +14,7 @@
     <header>
         <h1>Calculator</h1>
     </header>
+    <!-- Header ends-->
     <br>
     <br>
 
@@ -21,6 +22,7 @@
     <div class="container">
         <center>
             <form name="calc">
+                <!-- Calculator -->
                 <div class="calculator">
                     <input type="text" class="display" readonly placeholder="0"><br><br>
                     <div class="keys">
@@ -55,14 +57,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- Calculator ends-->
             </form>
         </center>
     </div>
-    
+
     <!-- Footer -->
     <footer>
         <p>&copy; Copyright Parangi Rathod
-        </footer>
+    </footer>
+    <!-- Footer ends-->
     <script src="Task1.js"></script>
 </body>
 
